@@ -1,0 +1,18 @@
+layer at (0,0) size 800x600
+  RenderView at (0,0) size 800x600
+layer at (0,0) size 800x152
+  RenderBlock {HTML} at (0,0) size 800x152
+    RenderBody {BODY} at (8,16) size 784x120
+      RenderBlock {P} at (0,0) size 784x18
+        RenderText {#text} at (0,0) size 64x18
+          text run at (0,0) width 64: "LTR Start"
+      RenderBlock {P} at (0,34) size 784x18
+        RenderText {#text} at (723,0) size 61x18
+          text run at (723,0) width 61: "LTR End"
+      RenderBlock {P} at (0,68) size 784x18
+        RenderText {#text} at (720,0) size 64x18
+          text run at (720,0) width 64: "RTL Start"
+      RenderBlock {P} at (0,102) size 784x18
+        RenderText {#text} at (0,0) size 61x18
+          text run at (0,0) width 61: "RTL End"
+        RenderText {#text} at (0,0) size 0x0
